<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Order Coffee</string>
    <string name="cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="user_name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="order">Order</string>
    <string name="first">1</string>
    <string name="thank_you">Thank you!</string>
    <string name="total">Total: $</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Add whipped cream?:  <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate?: <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>

</resources>
